[Mac] Shift the Generic Avatar Button by 1pt

Unit test: BrowserWindowLayoutTest.TestAvatarButtonAlignment

Bug: 643942
Change-Id: Ic5383e4b0564627cf0f7de26f58611eeff241302
Reviewed-on: https://chromium-review.googlesource.com/735981
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511596}
Former-commit-id: 2ac5993dfb95886b017cacfd0d3c89c12b3f3b82