chrome/browser/ui/cocoa/browser_window_layout.mm
@@ -44,6 +44,9 @@ const CGFloat kLocBarBottomInset = 1;
 // Space between the incognito badge and the right edge of the window.
 const CGFloat kAvatarRightOffset = 4;
 
+// Space between the generic avatar and the right edge of the window.
+const CGFloat kGenericAvatarRightOffset = 5;
+
 // Space between the location bar and the right edge of the window, when there
 // are no extension buttons present.
 // When there is a fullscreen button to the right of the new style profile
@@ -128,6 +131,10 @@ const CGFloat kLocationBarRightOffset = 35;
 
 - (void)setShouldUseNewAvatar:(BOOL)shouldUseNewAvatar {
   parameters_.shouldUseNewAvatar = shouldUseNewAvatar;
+}
+
+- (void)setIsGenericAvatar:(BOOL)isGenericAvatar {
+  parameters_.isGenericAvatar = isGenericAvatar;
 }
 
 - (void)setAvatarSize:(NSSize)avatarSize {
@@ -218,7 +225,9 @@ const CGFloat kLocationBarRightOffset = 35;
   // Lay out the icognito/avatar badge because calculating the indentation on
   // the right depends on it.
   if (parameters_.shouldShowAvatar) {
-    CGFloat badgeXOffset = -kAvatarRightOffset;
+    CGFloat badgeXOffset = parameters_.isGenericAvatar
+                               ? -kGenericAvatarRightOffset
+                               : -kAvatarRightOffset;
     CGFloat badgeYOffset = 0;
     CGFloat buttonHeight = parameters_.avatarSize.height;
 
